[workspace]
members = ["packages/*"]
exclude = ["packages/pd-interpreter"]

[workspace.dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
serde_json = "1.0.94"
pest = "2.6.0"
pest_derive = "2.6.0"
