[workspace]
resolver = "2"
members = ["packages/*"]
exclude = ["packages/pd-interpreter"]

[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0.40"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
serde_json = "1.0.99"
pest = "2.7.0"
pest_derive = "2.7.0"
